# vdtmath

./: CMakeLists.txt  README.md
include/vdtmath/: algorithm.h  circle.h  math.h  matrix.h  matrix2.h  matrix3.h  matrix4.h  quaternion.h  rectangle.h  transform.h  vector.h  vector2.h  vector3.h  vector4.h
samples/sandbox/: CMakeLists.txt  main.cpp
source/: quaternion.cpp  transform.cpp
